# BeamformIt

./: CMakeLists.txt  Doxyfile  README.md  do_beamforming.sh
cfg-files/: RT06s_conf.cfg  RT06s_lect.cfg  all_conf.cfg  ami.cfg  channels_all_conf  channels_ami  channels_rt06s_conf  channels_rt06s_lect  chime3.cfg
docs/: license.txt
includes/: delaysum.h  fileinout.h  global.h  parse_options.h  support.h  tdoa.h
run-files/: run_chime3.sh  run_rt06s_conf  run_rt06s_lect
src/: BeamformIt.cc  delaysum.cc  fileinout.cc  parse_options.cc  support.cc  tdoa.cc
